AC_INIT

AC_CANONICAL_BUILD
AC_CANONICAL_HOST

AC_PROG_CC
AC_PROG_CXX

AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MKDIR_P

AC_LANG_PUSH([C++])

AC_MSG_CHECKING([whether $CXX accepts -stdlib=libstdc++])

SAVE_CXXFLAGS="$CXXFLAGS"
CXXFLAGS="$CXXFLAGS -stdlib=libstdc++"
AC_COMPILE_IFELSE([AC_LANG_SOURCE([void foo();])],[
    AC_MSG_RESULT([yes])
],[
    CXXFLAGS="$SAVE_CXXFLAGS"
    AC_MSG_RESULT()
])

AC_LANG_POP


AC_CONFIG_FILES([Makefile])

AC_OUTPUT